k8s/resources/image-registry/_namespace.yaml
# Namespace for the container image registry
---
apiVersion: v1
kind: Namespace
metadata:
  name: image-registry
